--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="#services" style="--i:3">Skill</a>
       <a href="#skills" style="--i:4">Project</a>
       <a href="#contact" style="--i:5">Contact</a>
+       <button id="themeToggle" class="theme-btn">🌙</button>
     </nav>
   </header>
 
@@ -264,14 +265,16 @@
     </div>
 
     <div class="contact-form">
-      <form action="">
-        <input type="text" placeholder="Name" required />
-        <input type="email" placeholder="Enter Your Email" required />
-        <input type="text" placeholder="Enter Your Subject" />
-        <textarea cols="40" rows="10" placeholder="Enter Your Message"></textarea>
-        <input type="submit" value="Submit" class="send" />
-      </form>
+     <form id="contact-form">
+  <input type="text" name="name" id="name" placeholder="Name" required />
+  <input type="email" name="email" id="email" placeholder="Enter Your Email" required />
+  <input type="text" name="subject" id="subject" placeholder="Enter Your Subject" />
+  <textarea name="message" id="message" cols="40" rows="10" placeholder="Enter Your Message"></textarea>
+  <input type="submit" value="Submit" class="send" />
+</form>
+
     </div>
+    
   </section>
 
   <!-- Footer -->
@@ -279,6 +282,40 @@
     <p>Developed with ❤️ by Rahul Kumar © 2024</p>
   </div>
   <a href="#" class="top"><i class='bx bx-up-arrow-alt'></i></a>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  (function(){
+    emailjs.init("G0OivwWIZ9JBgGOhp");
+  })();
+</script>
+<script>
+document.getElementById("contact-form").addEventListener("submit", function(e) {
+  e.preventDefault();
+
+  emailjs.send("service_uq2dbtt", "template_q7bm009", {
+    name: document.getElementById("name").value,
+    email: document.getElementById("email").value,
+    subject: document.getElementById("subject").value,
+    message: document.getElementById("message").value,
+  })
+  .then(function() {
+      alert("Message sent successfully ✅");
+      document.getElementById("contact-form").reset();
+  }, function(error) {
+      alert("Failed to send message ❌");
+      console.log(error);
+  });
+});
+
+const btn=document.getElementById("themeToggle");
+btn.onclick=()=>{
+document.body.classList.toggle("light");
+btn.innerHTML=document.body.classList.contains("light")?"🌞":"🌙";
+}
+</script>
+
 </body>
 
 </html>
