--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     <h1 class="heading1">Professional Skills</h1>
 
     <!-- Skill Row 1 -->
+     <div class="center">
     <div class="skill-row">
       <div class="radial-ba">
         <svg viewBox="0 0 200 200">
@@ -203,7 +204,7 @@
       </div>
       <div class="text">Creativity</div>
     </div>
-
+</div>
   </div>
 </section>
 
